-Voice commands can be used during tests. -A StackPane is now being used as the root node to display all other fxml panes. -Alerts are now handled by StageManager. -Flipping a flash card no longer automatically reads the text. -Previous command changed to back in TestDisplay. -Commands are converted to their proper format automatically in TestDisplay.